--- a/Pages HTML/accueil.html
+++ b/Pages HTML/accueil.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>  </title>
+		<title>Mixtory</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         
         <!-- mobile specific info ... mobile specify windows size to 800/900 whereas device-width is less in general, resulting in small texte etc.- those meta correct this... -->
@@ -16,9 +16,18 @@
 		
 		<div id="globale">	
 			
-			<header> <!-- balise html5 equivalant à <div id="header"> -->	
+			<header> <!-- balise html5 equivalant à <div id="header"> -->
+				<button id="bouton">Horreur</button>			
+				<button id="bouton1">Comédie</button>
+				<button id="bouton2">Science-Fiction</button>
 			</header>
-			<div id="ex-story">Voici les anciennes histoires</div>
+			<div id = "ex-story">Voici les anciennes histoires</div> <!--Bouton-->
+			<!-- <div id = "pre-texte"><article>Me voici toute puissante je suis une nébuleuse</article></div> -->
+			<!-- <div id = "nbr_ligne_restante">Il reste %f lignes !</div> -->
+			<div id = "texte"><textarea>Rentrez votre texte</textarea></div>
+			<div id = "nbr_ligne">Choissisez le nombre de lignes : <textarea> </textarea></div>
+			<div id = "adresse-mail"><textarea>adresse mail</textarea></div>
+			<button id = "go">GO !</button>
 			<footer>
 								Nous contacter : <a href="mailto:g.grammont@hotmail.fr">Mail</a>
 			</footer>
