mise en place formulaire

--- a/Pages HTML/accueil.html
+++ b/Pages HTML/accueil.html
@@ -16,18 +16,22 @@
 		
 		<div id="globale">	
 			
-			<header> <!-- balise html5 equivalant à <div id="header"> -->
+			<header> <!-- balise html5 equivalant Ã  <div id="header"> -->
 				<button id="bouton">Horreur</button>			
-				<button id="bouton1">Comédie</button>
+				<button id="bouton1">ComÃ©die</button>
 				<button id="bouton2">Science-Fiction</button>
 			</header>
-			<div id = "ex-story">Voici les anciennes histoires</div> <!--Bouton-->
-			<!-- <div id = "pre-texte"><article>Me voici toute puissante je suis une nébuleuse</article></div> -->
+			<div id = "ex-story">Voici les anciennes histoires
+			<?php echo "Test PHP TMTC"; ?>
+			</div> <!--Bouton-->
+			<!-- <div id = "pre-texte"><article>Me voici toute puissante je suis une nÃ©buleuse</article></div> -->
 			<!-- <div id = "nbr_ligne_restante">Il reste %f lignes !</div> -->
-			<div id = "texte"><textarea>Rentrez votre texte</textarea></div>
-			<div id = "nbr_ligne">Choissisez le nombre de lignes : <textarea> </textarea></div>
-			<div id = "adresse-mail"><textarea>adresse mail</textarea></div>
-			<button id = "go">GO !</button>
+			<form method = "post" action = "cible.php">
+			<div id = "texte"><textarea name = "texte">Rentrez votre texte</textarea></div>
+			<div id = "nbr_ligne">Choissisez le nombre de lignes : <input type = "text" name = "nbr_lignes"/></div>
+			<div id = "adresse-mail"><input type = "text" name = "email" value = "Adresse Mail"/></div>
+			<input type= "submit" value = "Go !"/>
+			</form>
 			<footer>
 								Nous contacter : <a href="mailto:g.grammont@hotmail.fr">Mail</a>
 			</footer>
